--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "Concentrate",
-    "version" : "1.0.2.0",
+    "version" : "2.0.0.0",
     "author" : "SolverApps",
     "browser_action" : 
     {
@@ -22,7 +22,7 @@
         "newtab": "html/newtab.html"
       },
     "default_locale" : "en",
-    "description" : "Concentrate enables a True Dark-Mode NewTab Page and Multi-Monitor Deep Focus Enhancements",
+    "description" : "Concentrate enables a True Dark-Mode NewTab Page, Focus Enhancements and Noise Reductions",
     "permissions" : 
     [
         "*://*/*", "activeTab", "tabs", "storage"
