--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
         "newtab": "html/newtab.html"
       },
     "default_locale" : "en",
-    "description" : "Concentrate enables a True Dark-Mode NewTab Page, Focus Enhancements and Noise Reductions",
+    "description" : "Concentrate enables a True Dark-Mode NewTab Page, Fullscreen Focus Enhancements and Noise Reductions",
     "permissions" : 
     [
         "*://*/*", "activeTab", "tabs", "storage"
