--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,8 @@
             "request": "attach",
             "port": 9223,
             "name": "Edge Attach 9223",
-            "url": "extension://pflhhidhafdpggilhocmlfbaogcgbnln/html/background.html",
-            "url2": "http://localhost",
+            "url2": "extension://pflhhidhafdpggilhocmlfbaogcgbnln/html/background.html",
+            "url": "http://localhost",
             "webRoot": "${workspaceFolder}/js"
         }
     ]
