--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,9 @@
             "request": "attach",
             "port": 9223,
             "name": "Edge Attach 9223",
+            "url": "https://readm.org/manga/16086/969/all-pages",
             "url2": "extension://pflhhidhafdpggilhocmlfbaogcgbnln/html/background.html",
-            "url": "edge://newtab",
+            "url3": "edge://newtab",
             "webRoot": "${workspaceFolder}/js"
         }
     ]
