--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "request": "attach",
             "port": 9223,
             "name": "Edge Attach 9223",
-            "url": "https://www.youtube.com/watch?v=YQc4WT0yDH4",
+            "url": "https://us.cnn.com",
             "url2": "extension://pflhhidhafdpggilhocmlfbaogcgbnln/html/background.html",
             "url23": "edge://newtab",
             "webRoot": "${workspaceFolder}/js"
