--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "edge",
             "request": "attach",
             "port": 9223,
-            "url": "https://readm.org/manga/16555/551/all-pages",
+            "url": "https://www.youtube.com/watch?v=YQc4WT0yDH4",
             "webRoot": "${workspaceFolder}/js"
         },
         {
