--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,40 @@
-name: Chrome Addon Action
-uses: ruyd/ConcentrateAddon
-with:
-# ID of the extension that you are updating
-extension: mmlolmfkhnilblibmnalmkinojfpcckh
-# Path to a .zip of your addon
-zip: # optional
-# Google OAuth2 client id
-client-id: # optional
-# Google OAuth2 client secret
-client-secret: # optional
-# Google OAuth2 refresh token
-refresh-token: # optional
+name: Publish Chrome
+
+# Controls when the action will run. 
+on:
+  # Triggers the workflow on push or pull request events but only for the $default-branch branch
+  push:
+    branches: [ $default-branch ]
+  pull_request:
+    branches: [ $default-branch ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: trmcnvn/chrome-addon@v2
+        with:
+          extension: mmlolmfkhnilblibmnalmkinojfpcckh
+          #zip: # optional
+          #client-id: # optional
+          #client-secret: # optional
+          #refresh-token: # optional      
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
