--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Concentrate",
     "version": "3.0.0.0",
-    "author": "GoodSpeedApps",
+    "author": "GoodSpeed",
     "browser_action": {
         "default_icon": {
             "20": "images/icon_20.png"
