--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: trmcnvn/chrome-addon@v2
         with:
           extension: mmlolmfkhnilblibmnalmkinojfpcckh
-          #zip: # optional
-          #client-id: # optional
-          #client-secret: # optional
-          #refresh-token: # optional      
+          zip: build/release.zip
+          client-id: ${{ secrets.CHROME_CLIENT_ID }}
+          client-secret: ${{ secrets.CHROME_CLIENT_SECRET }}
+          refresh-token: ${{ secrets.CHROME_REFRESH_TOKEN }}
