--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ $default-branch ]
     paths:
-    - 'build/**'
+    - 'build/release.zip'
   workflow_dispatch:
 jobs:
   build:
