--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: trmcnvn/chrome-addon@v2
         with:
           extension: mmlolmfkhnilblibmnalmkinojfpcckh
-          zip: ../build/release.zip
+          zip: ./build/release.zip
           client-id: ${{ secrets.CHROME_CLIENT_ID }}
           client-secret: ${{ secrets.CHROME_CLIENT_SECRET }}
           refresh-token: ${{ secrets.CHROME_REFRESH_TOKEN }}
